--- a/Vine_Review_Analysis.ipynb
+++ b/Vine_Review_Analysis.ipynb
@@ -475,8 +475,8 @@
       "cell_type": "code",
       "execution_count": 33,
       "source": [
-        "df1 = df.filter(df.total_votes >= 20)\n",
-        "df1.show(5)"
+        "dfOne = df.filter(df.total_votes >= 20)\n",
+        "dfOne.show(5)"
       ],
       "outputs": [
         {
@@ -509,8 +509,8 @@
       "cell_type": "code",
       "execution_count": 34,
       "source": [
-        "df2 = df1.filter((df1.helpful_votes / df1.total_votes) >= 0.5)\n",
-        "df2.show(5)"
+        "dfTwo = dfOne.filter((dfOne.helpful_votes / dfOne.total_votes) >= 0.5)\n",
+        "dfTwo.show(5)"
       ],
       "outputs": [
         {
@@ -543,7 +543,7 @@
       "cell_type": "code",
       "execution_count": 35,
       "source": [
-        "paid_df = df2.filter(df2.vine == 'Y')\n",
+        "paid_df = dfTwo.filter(dfTwo.vine == 'Y')\n",
         "paid_df.show(5)\n"
       ],
       "outputs": [
@@ -571,7 +571,7 @@
       "cell_type": "code",
       "execution_count": 40,
       "source": [
-        "unpaid_df = df2.filter(df2.vine == 'N')\n",
+        "unpaid_df = dfTwo.filter(dfTwo.vine == 'N')\n",
         "unpaid_df.show(50)\n"
       ],
       "outputs": [
